@@ -17,6 +17,9 @@ DIST deblob-check-3.4 448778 SHA256 28ce952c082e765784f9e5b63f5a3a4fb93545e5e788
 DIST genpatches-3.10-67.base.tar.xz 1011628 SHA256 148e5bbc92bbc59e721a77c2a02c963590a844f208cf3bf42fbb80b72cf969c0 SHA512 cb764718daa1f34a1bc0dfc226b0d3db21e17c604ac4a00b1d937cdcc36daee43ac13ada02f9ce1b939a57953c48f5dd2aaf5ae644a70d8b33ab46fb6cdf1366 WHIRLPOOL e2163418ef83b5d0a598d3ea180764bdceee33ca2de1a5135a930f5d9ae474b4f157ff33b54cfb30c5af4119f89ff58a2391c92b3b7c062397d880ae8b2be6ae
 DIST genpatches-3.10-67.experimental.tar.xz 48592 SHA256 e94c0fda28f853ac362895d0274b31ec980328d74defe1b7841bdaa5092e6277 SHA512 0cba9d0fa4ed5d6c0ca52994220bfc5e30a9e7e58046d7c57643136f61e4f35efcde059e34e095b66897ab4bcdd4f095133900872603f80b825fe1f66315cf25 WHIRLPOOL 622baa54b11e37a95da1b3fc159c5d01d30567023e2b233066cadc102f7a12d83c62cf0984d19eb817ad8fe9b863379966b1e8f4153d7ff5f193b814dce7ed24
 DIST genpatches-3.10-67.extras.tar.xz 17816 SHA256 8252bf806ee326f5d65c5e908ee25f2456140339167a5fa15bf9459eaeb45476 SHA512 b9976a91186c1ff5d533fc965db6a6b465d3aeeeff077a22aa244241e0e03721dd9a7342ec78fd880cc5cd853afff19fdbc59c924c2d8f233a55a50493bca875 WHIRLPOOL 149977d5b979e2a02399fb1e076d96be50c067338973053a42b52b3d31dfaf2f74d4b68d9684b63715b14c59d193d425e7194e002dee48c32159d84372a12538
+DIST genpatches-3.10-68.base.tar.xz 1039020 SHA256 d643b50d3dbb80631b8d9c91447e710d088968a1b01b4d85dc8c060b9352f0bc SHA512 e906289519ac59370398c12154192ed75853dbd43106057366a11bb5bd51b3c5170b16370f76d8051f6cb3809e204a97754150fc2de44c0147e489ae795915ad WHIRLPOOL 51d4de7814c685c0d3a506b3cf93f301f67ef7e72536997268c76b1599dd2b29c2d5e311b0c07f7fa5559cc8916a1b9d18d1d0789dd08c4026a8ff247feed076
+DIST genpatches-3.10-68.experimental.tar.xz 48592 SHA256 b158b8c9fb78ff3a2d6803a1bc2d729557fccbb56506a2101736cc893e4da3e6 SHA512 faabd7136c733ca182190463a5c240b9fade76753c10985fbf3218f6d7e14a8037602878cc9197e0d266834d9a183c8b87c045c50f46ee4d427d9343ce78dcf7 WHIRLPOOL c4745558366319ae61650ea3db50749fcb354a50fd7bca50adceddcf2521b0e354dc9b53ec0cc0711013b275e36c78e6e3e3b6615c8b024ce35d807387fbc80b
+DIST genpatches-3.10-68.extras.tar.xz 17828 SHA256 fcee428cabfa8abcd589adf933b9f981ed0452800dd88d356419a9cd16fdef89 SHA512 2227d679e44d54c259d6f99976d4e141de878487f8deb5b142fe99216e3dc2e5e23d56581696786420f9fffbf28462d3b73645dcf420af96ca56d66d168124b8 WHIRLPOOL 3a65f1bef779e30d1594a848379c6a2d720369ba80ec3cb14a1917f80553e21fed349de4b90dd06c5e08410e8f0286bd6d9743e3a5224592d51535bc7f550fd3
 DIST genpatches-3.12-34.base.tar.xz 997560 SHA256 9a242380699e3e176f21a68ee43eeed99375fac35e34edfbcc23de7fd48a0aee SHA512 0aea3e42b0be0865e55e46aaf6b7ebd768a46ee735f15ed00a34a9a1072004e616a18a8c7a188632cb4d9f98518c4377819c64dbfc8fbd3018c33c6968daba4c WHIRLPOOL c2e43e450f47d62063a81e2502887ed7f37617199926dd79ee199bde7f56587bfc8e4f318e6f257c31c79107f849d93e63f7db5393c7b21b35219d43e44070bd
 DIST genpatches-3.12-34.experimental.tar.xz 46552 SHA256 5fdf0c883c58feda21ee9a3b807bd3aaf1f91c7ecc9f3cbb1052bc7ab7fe5933 SHA512 85e844ff772baa502ad4e4f083a8181e4d22d1485015163073fac67f72025eccc884ce8a95b985b210bd0dfa4905350ee008a2ef4fd9bff2941d96efe9f50526 WHIRLPOOL da98fc8d52822b59509ea7a62b8744d21c268133ec3e00d1d214075825c674e83c6e611c68908602dd018df912a341df123daa2c6e5a0b75b7d0c7f81104aefb
 DIST genpatches-3.12-34.extras.tar.xz 18204 SHA256 3773eb0b1e4c5df649ed84cfc93a5f2bc54b170d7a68628417772a14005e1e4e SHA512 3670e0bfddd62875b515a57217d2e860badb8b4919948f20c7db7e0aa04218f6acad7f2d8902777c46bc032fd5da19a134a64b4dd408d4c088749445ca4563b9 WHIRLPOOL 49b86193cdadf557e4ead6f21c6df053478fbd5f579ac0d03b705ca341701edf0a6f41102ed269498d516cf9478ca73964c71602008a25d5ac4f16eff08c8a11
